# track-editor

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
crates/tcx-parser/: Cargo.toml
crates/tcx-parser/src/: lib.rs
src/: App.tsx  index.css
src/components/: ActivityStats.tsx  FileUpload.tsx  TimelineChart.tsx  TrackMap.tsx  TrimControls.tsx
src/hooks/: useTcxEditor.ts
src/lib/: format.ts  wasm.ts
src/types/: tcx.ts
