[package]
name = "tcx-parser"
version = "0.1.0"
edition = "2021"
authors = ["Track Editor"]
description = "TCX file parser and editor for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "2.0"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
lto = true
